Adicionado estrutura de request, waiting list

--- a/grupo-xxx (Linux Intel)/grupo-45/Makefile
+++ b/grupo-xxx (Linux Intel)/grupo-45/Makefile
@@ -4,17 +4,16 @@ server: bin/aurrasd
 
 client: bin/aurras
 
-bin/aurrasd: obj/aurrasd.o
-	gcc -g obj/aurrasd.o -o bin/aurrasd
+GLIB = $(shell pkg-config --cflags --libs glib-2.0)
 
-obj/aurrasd.o: src/aurrasd.c
-	gcc -Wall -g -c src/aurrasd.c -o obj/aurrasd.o
 
-bin/aurras: obj/aurras.o
-	gcc -g obj/aurras.o -o bin/aurras
+bin/aurrasd: src/aurrasd.c src/task.c src/waitingTasks.c src/request.c headers/task.h headers/waitingTasks.h headers/request.h 
+	gcc -Wall -g -o bin/aurrasd src/aurrasd.c src/task.c src/waitingTasks.c src/request.c $(GLIB)
 
-obj/aurras.o: src/aurras.c
-	gcc -Wall -g -c src/aurras.c -o obj/aurras.o
+
+bin/aurras: src/aurras.c src/task.c src/waitingTasks.c src/request.c headers/task.h headers/waitingTasks.h headers/request.h 
+	gcc -Wall -g -o bin/aurras src/aurras.c src/task.c src/waitingTasks.c src/request.c $(GLIB)
+
 
 clean:
 	rm obj/* tmp/* bin/{aurras,aurrasd}
@@ -22,3 +21,4 @@ clean:
 test:
 	bin/aurras samples/sample-1.mp3 tmp/sample-1.mp3
 	bin/aurras samples/sample-2.mp3 tmp/sample-2.mp3
+
