--- a/grupo-xxx (Linux Intel)/grupo-45/Makefile
+++ b/grupo-xxx (Linux Intel)/grupo-45/Makefile
@@ -7,11 +7,11 @@ client: bin/aurras
 GLIB = $(shell pkg-config --cflags --libs glib-2.0)
 
 
-bin/aurrasd: src/aurrasd.c src/task.c src/listTasks.c src/request.c headers/task.h headers/listTasks.h headers/request.h headers/status.h headers/filtro.h
+bin/aurrasd: src/aurrasd.c src/task.c src/status.c src/listTasks.c src/request.c headers/task.h headers/listTasks.h headers/request.h headers/status.h headers/filtro.h
 	gcc -Wall -g -o bin/aurrasd src/aurrasd.c src/task.c src/listTasks.c src/request.c src/status.c $(GLIB)
 
 
-bin/aurras: src/aurras.c src/task.c src/listTasks.c src/request.c headers/task.h headers/listTasks.h headers/request.h headers/status.h headers/filtro.h
+bin/aurras: src/aurras.c src/task.c src/status.c src/listTasks.c src/request.c headers/task.h headers/listTasks.h headers/request.h headers/status.h headers/filtro.h
 	gcc -Wall -g -o bin/aurras src/aurras.c src/task.c src/listTasks.c src/request.c src/status.c $(GLIB)
  
 
