--- a/grupo-xxx (Linux Intel)/grupo-45/Makefile
+++ b/grupo-xxx (Linux Intel)/grupo-45/Makefile
@@ -7,13 +7,13 @@ client: bin/aurras
 GLIB = $(shell pkg-config --cflags --libs glib-2.0)
 
 
-bin/aurrasd: src/aurrasd.c src/task.c src/status.c src/listTasks.c src/request.c headers/task.h headers/listTasks.h headers/request.h headers/status.h headers/filtro.h
-	gcc -Wall -g -o bin/aurrasd src/aurrasd.c src/task.c src/listTasks.c src/request.c src/status.c $(GLIB)
+bin/aurrasd: src/aurrasd.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c headers/task.h headers/listTasks.h headers/request.h headers/filtersConfig.h headers/answer.h
+	gcc -Wall -g -o bin/aurrasd src/aurrasd.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c $(GLIB)
 
 
-bin/aurras: src/aurras.c src/task.c src/status.c src/listTasks.c src/request.c headers/task.h headers/listTasks.h headers/request.h headers/status.h headers/filtro.h
-	gcc -Wall -g -o bin/aurras src/aurras.c src/task.c src/listTasks.c src/request.c src/status.c $(GLIB)
- 
+bin/aurras: src/aurras.c src/task.c src/listTasks.c src/request.c src/answer.c src/filtersConfig.c headers/task.h headers/listTasks.h headers/request.h headers/filtersConfig.h headers/answer.h
+	gcc -Wall -g -o bin/aurras src/aurras.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c $(GLIB)
+
 
 clean:
 	rm obj/* tmp/* bin/{aurras,aurrasd}
