--- a/grupo-xxx (Linux Intel)/grupo-45/Makefile
+++ b/grupo-xxx (Linux Intel)/grupo-45/Makefile
@@ -7,12 +7,12 @@ client: bin/aurras
 GLIB = $(shell pkg-config --cflags --libs glib-2.0)
 
 
-bin/aurrasd: src/aurrasd.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c headers/task.h headers/listTasks.h headers/request.h headers/filtersConfig.h headers/answer.h
-	gcc -Wall -g -o bin/aurrasd src/aurrasd.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c $(GLIB)
+bin/aurrasd: src/aurrasd.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c src/processMusic.c headers/task.h headers/listTasks.h headers/request.h headers/filtersConfig.h headers/answer.h headers/processMusic.h
+	gcc -Wall -g -o bin/aurrasd src/aurrasd.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c src/processMusic.c $(GLIB)
 
 
-bin/aurras: src/aurras.c src/task.c src/listTasks.c src/request.c src/answer.c src/filtersConfig.c headers/task.h headers/listTasks.h headers/request.h headers/filtersConfig.h headers/answer.h
-	gcc -Wall -g -o bin/aurras src/aurras.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c $(GLIB)
+bin/aurras: src/aurras.c src/task.c src/listTasks.c src/request.c src/answer.c src/filtersConfig.c src/processMusic.c headers/task.h headers/listTasks.h headers/request.h headers/filtersConfig.h headers/answer.h headers/processMusic.h
+	gcc -Wall -g -o bin/aurras src/aurras.c src/task.c src/listTasks.c src/filtersConfig.c src/request.c src/answer.c src/processMusic.c $(GLIB)
 
 
 clean:
