processamento do audio a funcionar

--- a/grupo-xxx (Linux Intel)/grupo-45/etc/aurrasd.conf
+++ b/grupo-xxx (Linux Intel)/grupo-45/etc/aurrasd.conf
@@ -1,5 +1,5 @@
-alto aurrasd-gain-double 2
-baixo aurrasd-gain-half 2
-eco aurrasd-echo 1
-rapido aurrasd-tempo-double 2
-lento aurrasd-tempo-half 1
+alto aurrasd-filters/aurrasd-gain-double 2
+baixo aurrasd-filters/aurrasd-gain-half 2
+eco aurrasd-filters/aurrasd-echo 1
+rapido aurrasd-filters/aurrasd-tempo-double 2
+lento aurrasd-filters/aurrasd-tempo-half 1
